Right align sub headers on mobile screens. Resolves #61.

--- a/resources/assets/sass/_homepage.sass
+++ b/resources/assets/sass/_homepage.sass
@@ -36,7 +36,7 @@
 
     @media screen and (max-width: $grid-xs)
         .sub-header
-            text-align: center
+            padding-bottom: 20px
 
         .sub-content-right
             padding-top: 30px
