--- a/resources/assets/sass/_typography.sass
+++ b/resources/assets/sass/_typography.sass
@@ -4,7 +4,7 @@ h1, h2, h3, h4, h5, h6, p, label, span, ul
 
 h2
     font-size:      22px
-    font-weight:    bold
+    font-weight:    600
     margin-bottom:  10px
     margin-top:     5px
 
